added in the magazine section

--- a/index.html
+++ b/index.html
@@ -204,8 +204,7 @@
                                 The governor announced an extension for New York State's "PAUSE" policy, now in effect for at least two more weeks.
                             </p>
                         </div>
-                        </section>
-                    
+                    </section>
                 </div>
                 <div class="col-12 col-md-5 order-md-1 p-0">
                     <section class="p-3 bg-white">
@@ -313,7 +312,7 @@
                         </div>
                     </section>
                 </div>
-                <div class="col-12 bg-white d-flex flex-column justify-content-center">
+                <div class="col-12 bg-white">
                     <h3 class="text-secondary section-title">the debate</h3>
                     <section class="debate-section pb-2 position-relative">
                         <div class="d-flex border-bottom mb-1 pb-3 align-items-center">
@@ -563,7 +562,7 @@
                     <h3 class="text-secondary section-title pt-1 pb-2 border-bottom">
                         culture & travel
                     </h3>
-                    <section class="p-3 bg-white">
+                    <section class="bg-white">
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1577190/locked-down-italy-playing-music.jpg?w=397&h=397&f=fff013a398a6aa17054e4a960dd6ed06" alt="trump">
                             <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
@@ -577,7 +576,7 @@
                             Two American musicians play a nightly concert on their balcony while quarantined in their newly adopted home in Italy. It's a gift for their neighbors, but they also have a strong message for Americans, too.
                         </p>
                     </section>
-                    <section class="p-3 bg-white">
+                    <section class="bg-white">
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1575422/breakfast-lunch-dinner.jpg?w=397&h=397&f=a6dbd65ad3ba41063a6b46b1f92b7a60" alt="trump">
                             <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
@@ -591,7 +590,7 @@
                             Travelers can still explore the world while binge-watching these travel TV shows in home isolation. Thanks to streaming services, we can virtually send ourselves to nearly any and every part of the planet in just a few clicks.
                         </p>
                     </section>
-                    <section class="p-3 bg-white">
+                    <section class="bg-white">
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1575934/times-square-new-york.jpg?w=397&h=397&f=8e63eb59770c9b104b3e1ef85a1da1a7" alt="trump">
                             <span class="position-absolute font-weight-bold bg-light p-1 story-span travel-span">
@@ -662,7 +661,7 @@
                     </section>
                 </div>
                 <div class="col-12 bg-white">
-                    <section class="p-3 bg-white">
+                    <section class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1559216/tokyo-my-city-chizu-nakamoto.jpg?w=500&h=333&f=9c0c7599e1d2310c5649861e93649619" alt="image">
                             <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -678,9 +677,9 @@
                             </p>
                         </div>
                     </section>
-                    <div class=" w-50 ml-auto mr-auto bg-light p-3 border">
+                    <div class="pt-2 pb-2 w-50 ml-auto mr-auto bg-light p-3 border">
                         <div class="d-flex pb-1 align-items-center" >
-                            <img class="pr-2 icon-img mb-2" src="/img/n-icon.png" alt="image">
+                            <img class="pr-2 icon-img mb-2" src="img/n-icon.png" alt="image">
                             <p class="font-weight-bold text-dark mt-2">
                                 SIGN UP FOR OUR NEWSLETTER
                             </p>
@@ -692,7 +691,7 @@
                             Update your preferences >>
                         </a>
                     </div>
-                    <section class="p-3 bg-white">
+                    <section class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1576572/shutterstock-680368252.jpg?w=500&h=333&f=72d533330ba92c6f1f08392706a99bf5" alt="image">
                             <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -708,7 +707,7 @@
                             </p>
                         </div>
                     </section>
-                    <section class="p-3 bg-white">
+                    <section class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1573624/salisbury-university-franklin-p-perdue-school-business.jpg?w=500&h=333&f=3659296e96fa8be21c4386be2001f074" alt="image">
                             <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -724,7 +723,7 @@
                             </p>
                         </div>
                     </section>
-                    <section class="p-3 bg-white">
+                    <section class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1563375/delphian-school.jpg?w=500&h=333&f=c4fe893bfb5642271e1298b1bea3989b" alt="image">
                             <span class="position-absolute font-weight-bold bg-light p-2 story-span text-primary">
@@ -740,7 +739,7 @@
                             </p>
                         </div>
                     </section>
-                    <section class="p-3 bg-white">
+                    <section class="pt-2 pb-2 bg-white">
                         <div class="w-100 position position-relative border border-bottom-none">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1572014/worlds-best-hospitals-2020.png?w=500&h=333&f=c871e2709e79f9ba030be976797f7aa2" alt="image">
                         </div>
@@ -754,8 +753,132 @@
                         </div>
                     </section>
                 </div>
+                <div class="col-12 bg-white">
+                    <div class="d-flex align-items-center justify-content-center mr-auto ml-auto w-50">
+                        <img class="icon-img mr-2" src="img/n-icon.png" alt="image">
+                        <p class="font-weight-bold magazine-header">IN THE MAGAZINE</p>
+                    </div>
+                    <div class="w-100 position position-relative">
+                        <img class="w-100" src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=360&h=480&l=0&t=0&q=90&f=32baa29597300c7a9e09b35b8d6b1265" alt="flag">
+                        <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                            APRIL 03 ISSUE
+                        </span>
+                    </div>
+                    <a class="bg-secondary d-flex w-100 align-items-center justify-content-center text-white font-weight-bold pt-1 pb-1"  href="#">
+                        SEE ALL FEATURES >
+                    </a>
+                    <section class=" bg-white">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1575272/fe-covid-cure-opener.jpg?w=466&h=311&l=47&t=40&q=90&f=7d5d8ed57150fd6695e0e7d465be9cf5" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                COVER
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                tech & science
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            Is Hydroxychloroquine the Answer to COVID-19 Pandemic? Racing For a Cure
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1574896/closed-restaurant-california-coronavirus.jpg?w=466&h=311&q=90&f=8cff77fa2cad4be6923addd97f0b6e62" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                FEATURES
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                business
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            9 Smart Money Moves to Make Amid the Coronavirus Pandemic
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1573061/tony-blair-joe-biden-2020-donald-trump.jpg?w=466&h=311&q=90&f=ea1ab2c1ef89d35eb93345934e707298" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                PERISCOPE
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                politics
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            Tony Blair Says Biden Must Offer More Than 'Back to Normal' to Beat Trump
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1574309/per-president-01.jpg?w=466&h=311&q=90&f=168d52c0567fc2e15799924a2b21c1b5" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                PERISCOPE
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                culture
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            This Is What's Wrong With How We Elect a President—And How to Fix It
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1570671/tom-brady-new-england-patriots.jpg?w=466&h=311&q=90&f=a05bab031b2160d9cf6ac0cf9d1b3cf8" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                DOWNTIME
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                culture
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            The Four Greatest 'Tom Brady' Moments of Tom Brady's Patriots Career
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1576391/cul-uncharted-coffee-banner.jpg?w=466&h=311&q=90&f=5f5a97f0470b3803ed981b515b7a4b35" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                DOWNTIME
+                            </span>
+                            <a href="#" class="magazine-topic">
+                                culture
+                            </a>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            How The World Takes Its Coffee
+                        </a>
+                    </section>
+                    <section class=" bg-white mt-2">
+                        <div class="w-100 position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1575200/lonely-spaces-milan.jpg?w=480&h=320&q=90&f=30e9818a478c6c705541916dfb6bdcaa" alt="image">
+                        </div>
+                        <div class="d-flex pt-1 pb-1 align-items-center">
+                            <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
+                                IN FOCUS
+                            </span>
+                        </div>
+                        <a class="section-header magazine-text font-weight-bold pt-1 pb-1 d-block" href="#">
+                            LONELY SPACES: MILAN SHOPPING MALL
+                        </a>
+                    </section>
                 
 
+                </div>
             </div>
         </main>
 
