added editors pick

--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
                         <div class="w-100 position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1575200/lonely-spaces-milan.jpg?w=480&h=320&q=90&f=30e9818a478c6c705541916dfb6bdcaa" alt="image">
                         </div>
-                        <div class="d-flex pt-1 pb-1 align-items-center">
+                        <div class="d-flex pt-1 pb-1 align-items-center position-absolute">
                             <span class="mr-2 pr-1 pl-1 magazine-span d-flex align-items-center justify-content-center font-weight-bold">
                                 IN FOCUS
                             </span>
@@ -876,9 +876,128 @@
                             LONELY SPACES: MILAN SHOPPING MALL
                         </a>
                     </section>
-                
-
                 </div>
+                <div class="col-12 bg-white">
+                    <div class="d-flex align-items-center justify-content-center mr-auto ml-auto w-50">
+                        <img class="icon-img mr-2" src="img/n-icon.png" alt="image">
+                        <p class="font-weight-bold magazine-header">
+                            EDITOR'S PICK
+                        </p>
+                    </div>
+                    <section class=" bg-white border-top pt-4">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578467/us-border-closed.webp?w=767&h=512&f=34837b8177f639a4b6eb865a8ff15cc2" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                WORLD
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Nearly 40% Living in Countries With Closed Borders Amid COVID-19 Outbreak
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Meanwhile, more than 90% of people are living in countries with travel restrictions amid the COVID-19 outbreak.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578135/oil-donald-trump-coronavirus-russia-saudi-arabia.webp?w=767&h=512&f=b2ff2bffbbb548d4b22375b415eb0131" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                WORLD
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Trump Says Russia and Saudi Arabia Are Discussing End to Oil Price War
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            The dispute erupted last month and has driven down the price of oil in a market struggling under the coronavirus pandemic.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577903/us-capitol-reflected-ambulance-coronavirus-pandemic.webp?w=767&h=512&f=422f4a46d5a63f20846f2ddb37c04829" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                U.S.
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Five Ways to Get Health Insurance if You Lost Your Employer-Based Benefits
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            A record-breaking 3.3 million people filed for unemployment benefits last week as businesses across the country shut down because of the virus outbreak.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578262/jonnica-hill.webp?w=767&h=512&f=60abb845c5166685ea3e012ad17bf03a" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                HEALTH
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Erectile Dysfunction Linked to Higher Risk of Death, Cardiovascular Disease
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Men reporting erectile dysfunction faced a hazard ratio of 1.4 even when testosterone levels were healthy, the study authors state.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578450/queen-horseriding-windsor.webp?w=767&h=512&f=56986eaeffcd293d4f6ca207d3a0bbac" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                CULTURE
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Queen Elizabeth II's Life On Lockdown Revealed By Former Press Secretary
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Queen Elizabeth II faces months without horse riding due to social distancing rules but will be exercising, her former press secretary says.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1577880/stock-image-salt.webp?w=767&h=512&f=acccdb8effe8dde7e34683a8125fa747" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                HEALTH
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Too Much Salt May Lower Your Ability to Fight Bacteria
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            Tests in mice and humans suggest too much salt can dampen the body's response to infection. A healthy diet, sleep, exercise and reducing stress may help the immune system function.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578129/kroger-signage-11.webp?w=767&h=512&f=9617d2934c8c95b61b9f5bacd45700fd" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                U.S.
+                            </span>L
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Kroger Brings in 'Hero Bonus' for Frontline Employees
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            The company has brought in several measures to reward staff and protect them and customers during the COVID-19 outbreak.
+                        </p>
+                    </section>
+                    <section class=" bg-white">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1573091/quantum-computing.webp?w=767&h=512&f=f5434ecea061a309374983c4c2aa12cc" alt="image">
+                            <span class="position-absolute font-weight-bold bg-light p-2 story-span">
+                                TECH & SCIENCE
+                            </span>
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Quantum Internet May One Day Be Possible Through Optical Cavities: Caltech
+                        </a>
+                        <p class="section-summary pt-2 text-justify">
+                            New research from experts at the California Institute of Technology suggests atoms in small boxes of light — optical cavities — could soon "form the backbone technology" of a futuristic internet.
+                        </p>
+                    </section>
+                </div>
+                
             </div>
         </main>
 
