added US section

--- a/index.html
+++ b/index.html
@@ -1026,7 +1026,7 @@
                             Active Volcanoes Around the World That Could Erupt at Any Moment
                         </a>
                     </article>
-                    <article class=" bg-white border-top pt-4 pb-4">
+                    <article class=" bg-white border-top pt-4 pb-4 border-bottom mb-3">
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1547486/lipschutz-living-room-hotel-chelsea.webp?w=767&h=512&f=3725de5b65e2815136e61caee0bcd0ef" alt="image">
                             <div class="position-absolute font-weight-bold bg-light p-2 story-span slide-span d-flex align-items-center justify-content-center">
@@ -1036,6 +1036,55 @@
                         <a class="section-header font-weight-bold pt-2 d-block" href="#">
                             Inside the Last Bohemian Apartments of the Storied Hotel Chelsea
                         </a>
+                    </article>
+                </section>
+                <section class="col-12 bg-white">
+                    <a href="#" class="section-header-orange font-weight-bold">U.S</a>
+                    <article class=" bg-white border-top pt-4 pb-4">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578814/dr-anthony-fauci.webp?w=767&h=512&f=a3e3383ca6108259ebfd53bd8471a61a" alt="image">
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Fauci wants a national coronavirus stay-at-home order, but Trump doesn't
+                        </a>
+                    </article>
+                    <article class=" bg-white border-top pt-4 pb-4">
+                        <div class="w-100 position position-relative">
+                            <img class="w-100" src="https://d.newsweek.com/en/full/1578808/chuck-schumer.webp?w=767&h=512&f=8862c178a03655bfc8d9ca8814599baf" alt="image">
+                        </div>
+                        <a class="section-header font-weight-bold pt-2 d-block" href="#">
+                            Chuck Schumer Says He's 'Appalled' By Trump's Letter: 'Stop the Pettiness'
+                        </a>
+                    </article>
+                    <article class="pt-2 pb-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578805/tucker-carlson.webp?w=95&h=95&f=93672ffb2f17bc6dfb7405fc2bde8e6f" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Tucker Carlson: U.S. Shouldn't Let Medical Experts Make COVID-19 Decisions
+                            </a>
+                        </div>
+                    </article>
+                    <article class="pt-2 pb-2 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1578799/jared-kushner.webp?w=95&h=95&f=a0223559aa52ded69b52f247b1412ce8" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Jared Kushner Trends After Speaking at Coronavirus Task Force Briefing
+                            </a>
+                        </div>
+                    </article>
+                    <article class="pt-2 pb-4 mb-4 border-bottom d-flex bg-white">
+                        <div class="more-stories-img">
+                            <img src="https://d.newsweek.com/en/full/1575801/senate-democrats-block-coronavirus-stimulus-bill.webp?w=95&h=95&f=62be94c1b8c3ead702e061506261381f" alt="flag">
+                        </div>
+                        <div>
+                            <a class="opinion-header font-weight-bold pl-3 d-block more-stories-header" href="#">
+                                Trump Falsely Claims Schumer Has Been MIA in Coronavirus Fight
+                            </a>
+                        </div>
                     </article>
                 </section>
                 
