added newsletter section

--- a/index.html
+++ b/index.html
@@ -1394,6 +1394,29 @@
                         </div>
                     </article>
                 </section>
+                <section class="col-12 bg-white ">
+                    <h4 class="section-header-orange font-weight-bold">SUBSCRIBE</h4>
+                    <article class="pt-2 pb-2 mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
+                        <div class="position-relative img-container mt-3">
+                            <img class="position-absolute" id="subscribe-back" src="https://d.newsweek.com/en/full/1576902/april-03-2020-cover.jpg?w=170&q=95&f=e7b6af0ef76e162727acd0141bfc2e8a" alt="img">
+                            <img class="position-absolute" id="subscribe-front" src="https://d.newsweek.com/en/full/1577760/cover-april-10-2020.jpg?w=170&q=95&f=a4b41b48dc29ccde5be9091db89cdf35" alt="img">
+                        </div>
+                        <h4 class="font-weight-bold text-center">In-depth Stories You Don't See Elsewhere About Topics You Want to Read!</h4>
+                        <p>All Access + Weekly Delivery.</p>
+                        <p class="mt-n3">Choose A Membership That's Perfect for You!</p>
+                    </article>
+                </section>
+                <section class="col-12 bg-white">
+                    <h4 class="section-header-orange font-weight-bold">NEWSLETTER</h4>
+                    <article class="pb-2 mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
+                        <img class="w-100 newsletter-img" src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5" alt="img">
+                        <div class="border border-top-0 d-flex justify-content-center aling-items-center flex-column bg-white">
+                            <h4 class="font-weight-bold text-center">The Starting 5</h4>
+                            <p class="text-center">See why nearly a quarter of a million subscribers begin their day with the Starting 5.</p>
+                            <a class="news-letter-badge" href="#"><p class="font-weight-bold text-white text-center p-2 news-letter-badge">SIGN UP  ></p></a>
+                        </div>
+                    </article>
+                </section>
             </div>
         </main>
 
