--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>News Week clone page</title>
     <script src="https://kit.fontawesome.com/7290f27402.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/7290f27402.js" crossorigin="anonymous"></script>
   </head>
   <body>
         <header class="container-fluid container-lg col-lg-11  fixed-top">
@@ -177,7 +178,7 @@
         <main class="container-fluid container-lg col-lg-11 bg-light">
             <div class="row align-items-baseline">
                 <section class="col-12 col-md-7 order-md-2 p-0">
-                    <article class="p-3 bg-white">
+                    <article class="p-3 border-bottom bg-white">
                         <h3 class="text-secondary section-title">Top Story</h3>
                         <div class="w-100 position position-relative">
                             <img class="w-100" src="https://d.newsweek.com/en/full/1576593/china-united-states-flag-beijing.webp?w=591&h=364&f=c951543fd525705c8cdd166d42fa1102" alt="flag">
@@ -1281,7 +1282,7 @@
                             </a>
                         </div>
                     </article>
-                    <article class="pt-2 pb-4 mb-4 border-bottom d-flex bg-white">
+                    <article class="pt-2 pb-4 mb-4 d-flex bg-white">
                         <div class="more-stories-img">
                             <img src="https://d.newsweek.com/en/full/1578510/zoom-app.webp?w=95&h=95&f=a354d35e2f46848ef027a97b7164f486" alt="flag">
                         </div>
@@ -1408,7 +1409,7 @@
                 </section>
                 <section class="col-12 bg-white">
                     <h4 class="section-header-orange font-weight-bold">NEWSLETTER</h4>
-                    <article class="pb-2 mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
+                    <article class="mb-2 d-flex flex-column justify-content-center align-items-center bg-light">
                         <img class="w-100 newsletter-img" src="https://d.newsweek.com/en/full/1541302/starting5-homepage.png?w=397&h=265&q=90&f=742bce9a6f72dd8f19ba2e7fd5db06e5" alt="img">
                         <div class="border border-top-0 d-flex justify-content-center aling-items-center flex-column bg-white">
                             <h4 class="font-weight-bold text-center">The Starting 5</h4>
@@ -1419,7 +1420,115 @@
                 </section>
             </div>
         </main>
-
+        <footer class="col-12 bg-white mt-2 pb-3">
+            <div>
+                <a class="d-block my-3 footer-logo"href="#">
+                    <svg class="footer-logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60" style="enable-background:new 0 0 395.6 60;" xml:space="preserve"><g>
+                        <path class="st0" d="M58.7,10.8h-5.6v48.3H42.8l-25.1-33v22.1h5.6v10.8H0V48.3h5.6V10.8H0V0h17.6L41,30.7V10.8h-5.6V0h23.2	L58.7,10.8L58.7,10.8z M95.8,38c0,0.9,0,1.8-0.1,2.7H70.3c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11	c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6C89.9,16.3,95.8,25.6,95.8,38 M159,27.3h-3.7	l-9.4,31.8h-12.5l-5.9-17.4l-5.3,17.4h-12.8L98.8,27.4h-3.7V16.6h22.1v10.7h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.6l5-16.9h-5.6V16.6	H159L159,27.3L159,27.3z M174.5,27.8c0,1.5,1.2,2.5,5.4,3.9l6,2c5.5,1.8,12.1,5.9,12.1,13.4c0,8.8-6.6,13-14.7,13	c-6.5,0-11.5-3.2-12.9-4.6V59h-10.8V44.4h10.6c0.3,4.8,4.6,7.3,8.5,7.3c3.2,0,4.7-1.4,4.7-3c0-2-1.2-3.1-6.5-4.8l-5.3-1.8	c-5.4-1.7-11.4-5.7-11.4-12.8c0-8.7,7.7-13.1,14.3-13.1c6.8,0,10.1,1.9,11.8,3.8l0.1-3.3H197v13.3h-11.2c-0.2-3.6-3.7-5.2-7.2-5.2	C175.8,24.8,174.5,26.1,174.5,27.8 M262.8,27.3h-3.7l-9.4,31.8h-12.5l-5.9-17.4L226,59.1h-12.8l-10.6-31.7h-3.7V16.6h22.1v10.7	h-5.6l5.8,16.9l7.6-27.6h6.8l9.3,27.7l5-16.9h-5.6V16.6h18.5V27.3z M302,37.9c0,0.9,0,1.8-0.1,2.7h-25.4	c-0.7,8.2,2.4,10.6,7.1,10.6c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1	c0-10.5,7-21.6,21-21.6C296.1,16.2,302,25.5,302,37.9 M343.9,37.8c0,0.9,0,1.8-0.1,2.7h-25.4c-0.7,8.2,2.4,10.6,7.1,10.6	c3.9,0,6.9-2.6,6.9-6.6h11c-0.3,7.2-4,15.4-18.5,15.4c-14.5,0-21.3-10.5-21.3-22.1c0-10.5,7-21.6,21-21.6	C338,16.1,343.9,25.4,343.9,37.8 M389.9,59h-12.8l-13.3-17.3l-4.3,3.2v3.4h3.8V59h-19.6V48.3h3.7V10.6h-5.6V0h17.8v33.9l8.9-6.5	h-5.6V16.6h23.9v10.8h-3.7l-9.3,7l10.7,13.9h5.6L389.9,59L389.9,59z M395.6,56.6c0,0.5-0.1,0.9-0.4,1.2c-0.2,0.4-0.5,0.7-0.9,0.9	c-0.4,0.2-0.8,0.4-1.3,0.4c-0.5,0-0.9-0.1-1.2-0.4c-0.4-0.2-0.7-0.5-0.9-0.9c-0.2-0.4-0.4-0.8-0.4-1.2c0-0.5,0.1-0.9,0.4-1.2	c0.2-0.4,0.5-0.7,0.9-0.9c0.4-0.2,0.8-0.4,1.2-0.4c0.5,0,0.9,0.1,1.3,0.4c0.4,0.2,0.7,0.5,0.9,0.9	C395.5,55.8,395.6,56.2,395.6,56.6 M394.6,58c0.4-0.4,0.6-0.9,0.6-1.4c0-0.6-0.2-1-0.6-1.4s-0.9-0.6-1.4-0.6s-1,0.2-1.4,0.6	c-0.4,0.4-0.6,0.9-0.6,1.4c0,0.6,0.2,1,0.6,1.4c0.4,0.4,0.9,0.6,1.4,0.6S394.2,58.4,394.6,58 M393.6,56.8c0.1,0.1,0.2,0.1,0.2,0.1	c0.1,0.1,0.2,0.2,0.2,0.3c0,0,0.2,0.3,0.4,0.8h-0.8c-0.3-0.5-0.4-0.8-0.5-0.9c-0.1-0.1-0.2-0.2-0.3-0.2c0,0-0.1,0-0.1,0v1.1h-0.6	v-2.6h1.2c0.4,0,0.6,0.1,0.7,0.2c0.2,0.2,0.2,0.3,0.2,0.6c0,0.2-0.1,0.4-0.2,0.5C393.9,56.6,393.8,56.7,393.6,56.8 M393.5,56.3	c0.1-0.1,0.1-0.2,0.1-0.3s-0.1-0.2-0.1-0.3c-0.1-0.1-0.2-0.1-0.4-0.1h-0.3v0.7h0.3C393.3,56.4,393.4,56.4,393.5,56.3 M318.4,33.5	h13.9c0-6-3.9-8.4-6.8-8.4C322.1,25.2,318.6,27.9,318.4,33.5 M276.5,33.6h13.9c0-6-3.9-8.4-6.8-8.4C280.3,25.2,276.8,28,276.5,33.6 M70.3,33.7h13.9c0-6-3.9-8.4-6.8-8.4C74.1,25.3,70.6,28.1,70.3,33.7"></path>
+                        </g></svg>
+                </a>
+                <p class="my-1" id="footer-p">© 2020 NEWSWEEK</p>
+                <div class="d-flex border-bottom pb-2 mb-2">
+                    <a class="mx-1 footer-icon pr-1" href="#"><i class="fab fa-facebook-square"></i></a>
+                    <a class="mx-1 footer-icon px-1" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="mx-1 footer-icon px-1" href="#"><i class="fab fa-instagram"></i></a>
+                    <a class="mx-1 footer-icon px-1" href="#"><i class="fab fa-tumblr"></i></a>
+                    <a class="mx-1 footer-icon pl-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="d-flex">
+                    <p class="font-weight-bold text-secondary pr-3">
+                        Editions:
+                    </p>
+                    <a  href="#">
+                        <span class="px-1 text-secondary footer-link">
+                            U.S. Edition
+                        </span>
+                    </a>
+                    <a  href="#">
+                        <span class="px-1 text-secondary footer-link">
+                            日本
+                        </span>
+                    </a>
+                    <a  href="#">
+                        <span class="px-1 text-secondary footer-link">
+                            Pakistan
+                        </span>
+                    </a>
+                    <a  href="#">
+                        <span class="px-1 text-secondary footer-link">
+                            Polska
+                        </span>
+                    </a>
+                    <a  href="#">
+                        <span class="px-1 text-secondary footer-link">
+                            România
+                        </span>
+                    </a>
+                </div>
+                <div class="d-flex flex-wrap">
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            About Us
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Corrections
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Contact Us
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Editorial Guidelines
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Advertise
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Copyright
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Terms & Conditions
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Privacy Policy
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Cookie Policy
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            About Us
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 border-right footer-link text-secondary">
+                            Announcements
+                        </span>
+                    </a>
+                    <a class="py-2 pr-1" href="#">
+                        <span class="w-100 pr-2 footer-link text-secondary">
+                            Consent Preferences
+                        </span>
+                    </a>
+                </div>
+            </div>
+        </footer>
 
 
 
